--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.2",
     "@splinetool/react-spline": "^3.1.0",
+    "animate.css": "^4.1.1",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
