--- a/package.json
+++ b/package.json
@@ -9,18 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.106.0",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/postprocessing": "^2.16.2",
-    "@splinetool/react-spline": "^3.1.0",
     "animate.css": "^4.1.1",
-    "framer-motion": "^11.2.10",
-    "next": "14.2.3",
+    "gsap": "^3.12.5",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "sass": "^1.77.4",
-    "three": "^0.165.0"
+    "react-icons": "^5.3.0",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "postcss": "^8",
