--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "framer-motion": "^11.3.31",
     "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-use-measure": "^2.1.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
