--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "framer-motion": "^11.3.31",
+    "glitched-writer": "^2.0.29",
     "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
