--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "glitched-writer": "^2.0.29",
     "gsap": "^3.12.5",
     "next": "14.2.5",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
