--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
     "animate.css": "^4.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
-    "framer-motion": "^11.3.31",
+    "framer-motion": "^11.5.5",
     "glitched-writer": "^2.0.29",
     "gsap": "^3.12.5",
-    "next": "14.2.5",
+    "lucide-react": "^0.441.0",
+    "next": "^14.2.12",
     "nodemailer": "^6.9.15",
+    "prism-react-renderer": "^2.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-use-measure": "^2.1.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "postcss": "^8",
